# llvm-mipt

./: README.md
asm/: CMakeLists.txt  README.md  qrisc.md
asm/examples/: README.md  display.S  hello.S  life.S  loop.S  rand.S  stack.S  word.S
asm/src/: Assembler.cpp  Assembler.h  Instr.h  LLVMSimulator.cpp  Simulator.cpp  Simulator.h  lexer.l  main.cpp  parser.y  qrisc-asm.cpp  qrisc-llvm-sim.cpp  qrisc-sim.cpp
irgen/: CMakeLists.txt  README.md  main.cpp  output.ll
life_game/: CMakeLists.txt  README.md  life.ll
life_game/bindings/: sfml_bindings.cpp  sfml_bindings.h
life_game/sim/: sim.cpp  sim.h
life_game/src/: life.c
mercy/: CMakeLists.txt  README.md  mercy.md
mercy/examples/life_game/: Makefile  README.md  life.mercy
mercy/src/: AST.cpp  AST.h  Codegen.cpp  Codegen.h  GenericValue.h  Parser.h  Sema.cpp  Sema.h  Type.cpp  Type.h  lexer.l  mercy.cpp  misc.h  parser.y
mercy/tests/: run_tests  test_arithm  test_arrays  test_extern  test_functions  tests
trace/: CMakeLists.txt  README.md  TraceGenPass.cpp  analyze.pl  life.ll
